Guillotine 7 must be compatible with XP version 8 #1334